--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,7 @@
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
+
+V4 version:
+Alexandra Tatum <4946@holbertonstudents.com>
+Taylor Joyner <4923@holbertonstudents.com>
